# subburn

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
sandbox/: 01_basic.py  02_custom_style.py  03_highlight.py  04_highlight_zoom.py  05_karaoke.py  06_text_case_and_align.py  07_box_shadow.py  08_custom_bitrate.py  09_whisper_adapter.py  10_whisperx_adapter.py  11_srt_adapter.py  12_vtt_adapter.py
subburn/: __init__.py  core.py
subburn/adapters/: __init__.py  srt.py  vtt.py  whisper.py  whisperx.py
subburn/enums/: Position.py  TextAlign.py  TextCase.py  __init__.py
subburn/models/: SubtitleSegment.py  WordSegment.py  __init__.py
subburn/options/: HighlightStyle.py  KaraokeStyle.py  SubtitleStyle.py  VideoBitrateOptions.py  __init__.py
subburn/renderers/: __init__.py  base.py  highlight.py  karaoke.py  standard.py
subburn/types/: BoxShadow.py  Color.py  __init__.py
subburn/utils/: __init__.py  gpu.py  text.py
