[project]
name = "subburn"
version = "0.1.0"
description = "Burn subtitles directly onto video frames with block, highlight, and karaoke renderers."
authors = [{name = "Leo Jaimesson"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "av>=12.0",
    "Pillow>=10.0",
    "numpy>=1.24",
]
keywords = ["subtitles", "video", "karaoke", "whisper", "whisperx", "av", "transcription", "pillow", "pyav", "burn-subtitles", "hardcoded-subtitles", "highlight", "word-level", "video-processing", "subtitle-burner", "text-overlay", "word-timestamps", "speech-to-text", "timed-text", "frame-rendering", "captions", "caption-burn", "animated-subtitles", "word-highlight", "karaoke-effect", "auto-subtitles", "srt", "reels", "shorts", "open-captions", "vtt", "webvtt"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/leojaimesson/subburn"
Repository = "https://github.com/leojaimesson/subburn"
"Bug Tracker" = "https://github.com/leojaimesson/subburn/issues"

[tool.setuptools.packages.find]
include = ["subburn*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
